-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 11, 17, 21, 22, 23, 24
-
Component/s: client-libs
-
b26
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8345115 | 21.0.7-oracle | Alexander Zvegintsev | P3 | Resolved | Fixed | b01 |
| JDK-8346858 | 21.0.7 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
| JDK-8365223 | 17.0.17 | Goetz Lindenmaier | P3 | Resolved | Fixed | b03 |
It happens due to the call to gtk->g_main_context_iteration(NULL, TRUE) when we try to capture screen data, this blocks the gtk fx main loop.
Possible solutions are:
1. make a busy wait loop if we detect a gtk loop running
gtk->g_main_context_iteration(NULL, gtk->gtk_main_level == 0);
This will prevent the SwingNodeJDialogTest from hanging, and receive pixel color successfully.
2. do the same change as in
- backported by
-
JDK-8345115 [XWayland] JavaFX hangs when calling java.awt.Robot.getPixelColor
-
- Resolved
-
-
JDK-8346858 [XWayland] JavaFX hangs when calling java.awt.Robot.getPixelColor
-
- Resolved
-
-
JDK-8365223 [XWayland] JavaFX hangs when calling java.awt.Robot.getPixelColor
-
- Resolved
-
- blocks
-
JDK-8335470 [XWayland] JavaFX tests that use AWT Robot fail on Wayland
-
- Resolved
-
- relates to
-
JDK-8326712 Robot tests fail on XWayland
-
- Resolved
-
-
JDK-8335469 [XWayland] crash when an AWT ScreenCast session overlaps with an FX ScreenCast session
-
- Resolved
-
-
JDK-8337827 [XWayland] Skip failing tests on Wayland
-
- Resolved
-
-
JDK-8350009 [XWayland] SwingNodePlatformExitCrashTest hangs on Ubuntu 24.04
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk17u-dev/599e2634
-
Commit(master)
openjdk/jdk21u-dev/8a5bbfeb
-
Commit(master)
openjdk/jdk/965aace2
-
Review(master)
openjdk/jdk17u-dev/3830
-
Review(master)
openjdk/jdk21u-dev/1287
-
Review(master)
openjdk/jdk/22131