8335468: [XWayland] JavaFX hangs when calling java.awt.Robot.getPixelColor